tests/baselines/reference/parserVariableStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserVariableStatement1.d.ts(1,1): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserVariableStatement1.d.ts (1 errors) ====
    var v = 1;
    ~~~
!!! error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.